# Algorytm-genetyczny

./: CMakeLists.txt  Genetyczny.cpp  Genetyczny.h  Graf.cpp  Graf.h  Menu.cpp  Menu.h  TestRunner.cpp  main.cpp
